Bug 1992940 - Truncate long urls in trustpanel. r=desktop-theme-reviewers,dao
Differential Revision: https://phabricator.services.mozilla.com/D269145

--- a/browser/themes/shared/controlcenter/panel.css
+++ b/browser/themes/shared/controlcenter/panel.css
@@ -799,8 +799,14 @@
   padding-inline-start: var(--space-large);
 }
 
+#trustpanel-popup-host-wrapper {
+  overflow: hidden;
+}
+
 #trustpanel-popup-host {
   align-self: center;
+  overflow: hidden;
+  text-overflow: ellipsis;
   white-space: nowrap;
 }
 
